fix z-index & update UI ProfileFriends

--- a/src/components/Layout/components/ChatBox/ChatBox.module.scss
+++ b/src/components/Layout/components/ChatBox/ChatBox.module.scss
@@ -2,7 +2,7 @@
     position: fixed;
     bottom: 30%;
     right: 16px;
-    z-index: 999;
+    z-index: 5;
     animation: fade 0.2s ease;
 
     .notification-count {
@@ -112,7 +112,7 @@
     border-top-left-radius: 8px;
     display: flex;
     flex-direction: column;
-    z-index: 999;
+    z-index: 5;
 }
 
 .header-chat {
