--- a/src/pages/Categories/Voucher/Voucher.module.scss
+++ b/src/pages/Categories/Voucher/Voucher.module.scss
@@ -3,7 +3,7 @@
     inset: 0;
     background-color: rgba(0, 0, 0, 0.3);
     visibility: hidden;
-    z-index: 99999;
+    z-index: 10;
 }
 
 .contents {
@@ -15,7 +15,7 @@
     transform: translate(-50%, -50%) scale(0);
     transition: all ease-in-out 0.25s;
     transform-origin: center center;
-    z-index: 999999;
+    z-index: 11;
     border-radius: 4px;
 }
 
