--- a/src/pages/ProfileFriends/ProfileFriends.module.scss
+++ b/src/pages/ProfileFriends/ProfileFriends.module.scss
@@ -27,7 +27,7 @@
             box-shadow: 0 0px 8px #d7d7d7;
             background-color: #fff;
             border-radius: 6px;
-            z-index: 999;
+            z-index: 5;
             padding: 16px;
             padding-bottom: 0;
 
