--- a/src/pages/Search/Search.module.scss
+++ b/src/pages/Search/Search.module.scss
@@ -80,7 +80,7 @@ $tablet-width: 1023px;
                     box-shadow: 0 1px 4px #d7d7d7;
                     left: 0;
                     right: 0;
-                    z-index: 9;
+                    z-index: 5;
 
                     h6 {
                         padding: 12px 8px 8px 8px;
